--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: rgb(59, 30, 84);
+  --transitional-color: rgb(100, 56, 140);
   --secondary-color: rgb(155, 126, 189);
   --background-color: rgb(238, 238, 238);
   --text-color: #000;
@@ -13,7 +14,7 @@ body {
 }
 
 header {
-  background-color: var(--primary-color);
+  background-color: var(--transitional-color);
   color: #fff;
   padding: 1rem 0;
   text-align: center;
@@ -59,13 +60,13 @@ table th, table td {
 }
 
 table th {
-  background-color: var(--primary-color);
+  background-color: var(--transitional-color);
   color: #fff;
 }
 
 button {
   padding: 0.5rem 1rem;
-  background-color: var(--primary-color);
+  background-color: var(--transitional-color);
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -74,4 +75,59 @@ button {
 
 button:hover {
   background-color: var(--secondary-color);
+}
+
+/*Sidebar*/
+
+/* Sidebar Styling */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px;  /* Initially off-screen */
+  height: 100%;
+  width: 250px;
+  background-color: rgb(59, 30, 84);
+  color: white;
+  transition: left 0.3s ease;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.sidebar.open {
+  left: 0;
+}
+
+.sidebar-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.sidebar-header h2 {
+  margin: 0;
+  color: #D4BEE4;
+}
+
+.sidebar-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar-links li {
+  padding: 15px;
+  text-align: center;
+}
+
+.sidebar-links li a {
+  text-decoration: none;
+  color: #D4BEE4;
+  display: block;
+}
+
+.sidebar-links li a:hover {
+  color: #D4BEE4;
 }
