--- a/config/styles2.css
+++ b/config/styles2.css
@@ -3,11 +3,10 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #c1c1c1; 
-    overflow-y: hidden;
+    background-color: #808080; /* Set background to gray */
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center; /* Center align the  content vertically and horizontally */
     min-height: 100vh;
     color: #363636; /* Dark grey text */
 }
@@ -129,11 +128,12 @@ h1 {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
-/* Button Styling (Bulma-inspired) */
+/* Button Styling */
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #7950f2; /* Bulma primary color */
+    background-color: #7950f2; 
+    text-align: center;
     color: white;
     border-radius: 5px;
     text-decoration: none;
@@ -146,14 +146,14 @@ h1 {
 }
 
 .button.is-primary {
-    background-color: #7950f2; /* Bulma primary button */
+    background-color: #7950f2; 
 }
 
 /* Room Details Styling */
 .room-details {
     width: 100%;
-    height: 100vh;
-    background: none;
+    height: 100%;
+    background: #808080;
     box-shadow: none;
     border: none;
     display: flex;
@@ -191,7 +191,10 @@ h1 {
         font-size: 1.75rem;
     }
     .room-box {
-        padding: 15px;
+        padding: 30px;
+    }
+    .room-details{
+        padding: 10px;
     }
     .button {
         padding: 8px 15px;
@@ -207,7 +210,10 @@ h1 {
         font-size: 2rem;
     }
     .room-box {
-        padding: 18px;
+        padding: 40px;
+    }
+    .room-details{
+        padding: 15px;
     }
     .button {
         padding: 10px 18px;
@@ -223,7 +229,10 @@ h1 {
         font-size: 2.5rem;
     }
     .room-box {
-        padding: 30px;
+        padding: 50px;
+    }
+    .room-details{
+        padding: 20px;
     }
     .button {
         padding: 12px 20px;
