--- a/LoginandRegistration/RegistrationStyles.css
+++ b/LoginandRegistration/RegistrationStyles.css
@@ -1,37 +1,49 @@
 body {
     background-color: rgb(238, 238, 238);
 }
+
 .card {
-    background-color: rgb(212, 190, 228);
-    border: 1px solid rgb(155, 126, 189);
-    border-radius: 10px;
-    padding: 20px;
+background-color: rgb(212, 190, 228);
+border: 1px solid rgb(155, 126, 189);
+border-radius: 10px;
+padding: 20px;
+max-width: 500px; 
+margin: 0 auto; 
 }
+
 .alert {
     color: red;
 }
 .success {
     color: green;
 }
+
+form {
+width: 100%; 
+max-width: 400px; 
+margin: 0 auto; 
+padding: 20px; 
+}
+
 input {
-    background-color: white;
-    color:black;
-}        body {
-    background-color: rgb(238, 238, 238);
+width: 100%; 
+padding: 10px; 
+font-size: 16px; 
+border-radius: 5px;
+border: 1px solid rgb(155, 126, 189);
+background-color:white ;
 }
-.card {
-    background-color: rgb(212, 190, 228);
-    border: 1px solid rgb(155, 126, 189);
-    border-radius: 10px;
-    padding: 20px;
+
+h2{
+    text-align: center;
+    color: black;
+    font-style: italic;
 }
-.alert {
-    color: red;
+
+label{
+    color: black;
+    font-weight: bold;
 }
-.success {
-    color: green;
-}
-input {
-    background-color: white;
-    color:black;
+.inputspc{
+    background-color: rgb(59,30,84);
 }
