--- a/ReportingSystem/Reporting.css
+++ b/ReportingSystem/Reporting.css
@@ -1,6 +1,74 @@
+.sidebar-toggle {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    color: #9B7EBD; /* Purple color */
+    background-color: transparent; /* Remove box around icon */
+    border: none;
+    cursor: pointer;
+    z-index: 1050;
+    transition: transform 0.3s ease;
+}
+
+.sidebar-toggle:hover {
+    transform: scale(1.1); /* Slightly increase size on hover */
+}
 body{
     background-color: #ebe5ef;
 }
+/* Sidebar Styling */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;  /* Initially off-screen */
+    height: 100%;
+    width: 250px;
+    background-color: rgb(59, 30, 84);
+    color: white;
+    transition: left 0.3s ease;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .sidebar.open {
+    left: 0;
+  }
+  
+  .sidebar-header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .sidebar-header h2 {
+    margin: 0;
+    color: #D4BEE4;
+  }
+  
+  .sidebar-links {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .sidebar-links li {
+    padding: 15px;
+    text-align: center;
+  }
+  
+  .sidebar-links li a {
+    text-decoration: none;
+    color: #D4BEE4;
+    display: block;
+  }
+  
+  .sidebar-links li a:hover {
+    color: #D4BEE4;
+  }
 
 .chart-container {
     padding: 10px;
